--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
     "autoload": {
         "psr-0": { "": "src/" }
     },
-    "minimum-stability": "dev",
-    "prefer-stable": false,
+    "minimum-stability": "stable",
     "require": {
         "php": ">=5.3.3",
         "symfony/symfony": "2.3.*",
@@ -24,23 +23,23 @@
         "sensio/distribution-bundle": "2.3.*",
         "sensio/framework-extra-bundle": "2.3.*",
         "sensio/generator-bundle": "2.3.*",
-        "symfony-cmf/symfony-cmf": "1.0.0-RC7",
-        "symfony-cmf/simple-cms-bundle": "1.0.0-RC7",
-        "symfony-cmf/search-bundle": "1.0.0-RC3",
-        "symfony-cmf/create-bundle": "1.0.0-RC4",
-        "symfony-cmf/routing-auto-bundle": "1.0.0-alpha6",
-        "symfony-cmf/blog-bundle": "1.0.0-beta6",
+        "symfony-cmf/symfony-cmf": "1.0.*",
+        "symfony-cmf/simple-cms-bundle": "1.0.*",
+        "symfony-cmf/search-bundle": "1.0.*",
+        "symfony-cmf/create-bundle": "1.0.*",
+        "symfony-cmf/routing-auto-bundle": "~1.0.0-alpha8@dev",
+        "symfony-cmf/blog-bundle": "~1.0.0-beta7@dev",
         "jackalope/jackalope-doctrine-dbal": "1.0.*",
         "jackalope/jackalope-jackrabbit": "1.0.*",
         "doctrine/doctrine-bundle": "1.2.*",
         "doctrine/data-fixtures": "1.0.*",
         "sonata-project/cache-bundle": "2.1.*",
-        "sonata-project/doctrine-phpcr-admin-bundle": "1.0.0-RC6",
+        "sonata-project/doctrine-phpcr-admin-bundle": "1.0.*",
         "eko/feedbundle": "1.0.*",
         "lunetics/locale-bundle": "2.2.*",
         "liip/imagine-bundle": "~0.12",
-        "wjzijderveld/check-bundles": "1.0.*",
-        "helios-ag/fm-elfinder-bundle": "1.x"
+        "wjzijderveld/check-bundles": "1.0.*@dev",
+        "helios-ag/fm-elfinder-bundle": "~1.4"
     },
     "require-dev": {
         "liip/functional-test-bundle": "1.0.*",
