added FOSRestBundle exception controller

--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,8 @@
         "lunetics/locale-bundle": "2.2.*",
         "liip/imagine-bundle": "~0.12",
         "wjzijderveld/check-bundles": "1.0.*@dev",
-        "helios-ag/fm-elfinder-bundle": "~1.4"
+        "helios-ag/fm-elfinder-bundle": "~1.4",
+        "doctrine/phpcr-odm": "~1.0.1"
     },
     "require-dev": {
         "liip/functional-test-bundle": "1.0.*",
