--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -24,6 +24,7 @@ twig:
     form:
         resources:
             - 'CmfMediaBundle:Form:fields.html.twig'
+    exception_controller: 'FOS\RestBundle\Controller\ExceptionController::showAction'
 
 # Assetic Configuration
 assetic:
@@ -342,4 +343,4 @@ fos_rest:
         json: true
     format_listener:
         rules:
-            - { path: ^/, priorities: [ html, json, xml ], fallback_format: ~, prefer_extension: true }
+            - { path: ^/, priorities: [ html, json, xml ], fallback_format: html, prefer_extension: false }
