--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "symfony-cmf/simple-cms-bundle": "1.0.*",
         "symfony-cmf/search-bundle": "1.0.*",
         "symfony-cmf/create-bundle": "1.0.*",
-        "symfony-cmf/routing-auto-bundle": "~1.0.0-alpha8@dev",
+        "symfony-cmf/routing-auto-bundle": "1.0.0-alpha8@dev",
         "symfony-cmf/blog-bundle": "~1.0.0-beta7@dev",
         "jackalope/jackalope-doctrine-dbal": "1.0.*",
         "jackalope/jackalope-jackrabbit": "1.0.*",
