--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -343,4 +343,4 @@ fos_rest:
         json: true
     format_listener:
         rules:
-            - { path: ^/, priorities: [ html, json, xml ], fallback_format: html, prefer_extension: false }
+            - { path: ^/, priorities: [ html, json, xml, css ], fallback_format: html, prefer_extension: false }
