switch to DoctrineCacheBundle

--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "jackalope/jackalope-jackrabbit": "~1.1",
         "doctrine/doctrine-bundle": "~1.2",
         "doctrine/data-fixtures": "1.0.*",
+        "doctrine/doctrine-cache-bundle": "~1.0",
         "sonata-project/cache-bundle": "~2.1",
         "sonata-project/doctrine-phpcr-admin-bundle": "~1.1",
         "symfony-cmf/block-bundle": "~1.1",
