--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -311,13 +311,12 @@ fm_elfinder:
                 upload_allow: ['all']
                 upload_max_size: 2M
 
-# jackalope doctrine caching
-#liip_doctrine_cache:
-#    namespaces:
-#        meta:
-#            type: file_system
-#        nodes:
-#            type: file_system
+doctrine_cache:
+    providers:
+        phpcr_meta:
+            type: file_system
+        phpcr_nodes:
+            type: file_system
 
 fos_rest:
     view:
