--- a/app/config/phpcr_doctrine_dbal.yml.dist
+++ b/app/config/phpcr_doctrine_dbal.yml.dist
@@ -2,9 +2,9 @@ parameters:
     phpcr_backend:
         type: doctrinedbal
         connection: default
-#        caches:
-#            meta: liip_doctrine_cache.ns.meta
-#            nodes: liip_doctrine_cache.ns.nodes
+        caches:
+            meta: doctrine_cache.providers.phpcr_meta
+            nodes: doctrine_cache.providers.phpcr_nodes
     phpcr_workspace: default
     phpcr_user: admin
     phpcr_pass: admin
