--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
         "doctrine/doctrine-cache-bundle": "~1.0",
         "sonata-project/cache-bundle": "~2.1",
         "sonata-project/doctrine-phpcr-admin-bundle": "~1.1",
+        "sonata-project/jquery-bundle": "1.8.3",
         "symfony-cmf/block-bundle": "~1.1",
         "eko/feedbundle": "~1.0",
         "lunetics/locale-bundle": "~2.2",
