activate logging/profiling by default

--- a/app/config/phpcr_doctrine_dbal.yml.dist
+++ b/app/config/phpcr_doctrine_dbal.yml.dist
@@ -1,5 +1,7 @@
 parameters:
     phpcr_backend:
+        logging: true
+        profiling: true
         type: doctrinedbal
         connection: default
         caches:
