--- a/composer.json
+++ b/composer.json
@@ -23,28 +23,28 @@
         "sensio/distribution-bundle": "2.3.*",
         "sensio/framework-extra-bundle": "2.3.*",
         "sensio/generator-bundle": "2.3.*",
-        "symfony-cmf/symfony-cmf": "~1.1",
-        "symfony-cmf/simple-cms-bundle": "dev-cleanup-routing as 1.1.0",
-        "symfony-cmf/search-bundle": "~1.1",
-        "symfony-cmf/create-bundle": "~1.1",
-        "jackalope/jackalope-doctrine-dbal": "~1.1",
-        "jackalope/jackalope-jackrabbit": "~1.1",
-        "doctrine/doctrine-bundle": "~1.2",
+        "symfony-cmf/symfony-cmf": "1.1.*",
+        "symfony-cmf/simple-cms-bundle": "1.1.*",
+        "symfony-cmf/search-bundle": "1.1.*",
+        "symfony-cmf/create-bundle": "1.1.*",
+        "jackalope/jackalope-doctrine-dbal": "1.1.*",
+        "jackalope/jackalope-jackrabbit": "1.1.*",
+        "doctrine/doctrine-bundle": "1.2.*",
         "doctrine/data-fixtures": "1.0.*",
-        "doctrine/doctrine-cache-bundle": "~1.0",
-        "sonata-project/cache-bundle": "~2.1",
-        "sonata-project/doctrine-phpcr-admin-bundle": "~1.1",
+        "doctrine/doctrine-cache-bundle": "1.0.*",
+        "sonata-project/cache-bundle": "2.1.*",
+        "sonata-project/doctrine-phpcr-admin-bundle": "1.1.*",
         "sonata-project/jquery-bundle": "1.8.3",
-        "symfony-cmf/block-bundle": "~1.1",
-        "eko/feedbundle": "~1.0",
-        "lunetics/locale-bundle": "~2.2",
-        "liip/imagine-bundle": "~0.12",
-        "wjzijderveld/check-bundles": "~1.0",
-        "helios-ag/fm-elfinder-bundle": "~1.4"
+        "symfony-cmf/block-bundle": "1.1.*",
+        "eko/feedbundle": "1.0.*",
+        "lunetics/locale-bundle": "2.2.*",
+        "liip/imagine-bundle": "0.21.*",
+        "wjzijderveld/check-bundles": "1.0.*",
+        "helios-ag/fm-elfinder-bundle": "1.4.*"
     },
     "require-dev": {
-        "liip/functional-test-bundle": "~1.0.1",
-        "symfony-cmf/testing": "~1.0"
+        "liip/functional-test-bundle": "1.0.*",
+        "symfony-cmf/testing": "1.1.*"
     },
     "scripts": {
         "post-install-cmd": [
