replace StaticContent by DemoSeoContent

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -95,6 +95,11 @@ cmf_core:
         phpcr:
             enabled: true
 
+cmf_content:
+    persistence:
+        phpcr:
+            document_class: Sandbox\MainBundle\Document\DemoSeoContent
+
 cmf_routing:
     chain:
         routers_by_id:
