--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "symfony-cmf/simple-cms-bundle": "1.1.*",
         "symfony-cmf/search-bundle": "1.1.*",
         "symfony-cmf/create-bundle": "1.1.*",
-        "symfony-cmf/seo-bundle":"~1.0.0",
+        "symfony-cmf/seo-bundle":"1.0.*",
         "jackalope/jackalope-doctrine-dbal": "1.1.*",
         "jackalope/jackalope-jackrabbit": "1.1.*",
         "doctrine/doctrine-bundle": "1.2.*",
