since burgov/key-value-form-bundle became an optional/dev dependency of seo-bundle, it should be included in the composer.json on this level of the project

--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,8 @@
         "lunetics/locale-bundle": "2.2.*",
         "liip/imagine-bundle": "0.21.*",
         "wjzijderveld/check-bundles": "1.0.*",
-        "helios-ag/fm-elfinder-bundle": "1.4.*"
+        "helios-ag/fm-elfinder-bundle": "1.4.*",
+        "burgov/key-value-form-bundle": "1.0.*"
     },
     "require-dev": {
         "liip/functional-test-bundle": "1.0.*",
