--- a/composer.json
+++ b/composer.json
@@ -22,11 +22,11 @@
         "sensio/distribution-bundle": "2.3.*",
         "sensio/framework-extra-bundle": "2.3.*",
         "sensio/generator-bundle": "2.3.*",
-        "symfony-cmf/symfony-cmf": "1.1.*",
-        "symfony-cmf/simple-cms-bundle": "1.1.*",
-        "symfony-cmf/search-bundle": "1.0.*",
-        "symfony-cmf/create-bundle": "1.1.*",
-        "symfony-cmf/seo-bundle":"1.0.*",
+        "symfony-cmf/symfony-cmf": "1.2.*",
+        "symfony-cmf/simple-cms-bundle": "1.2.*",
+        "symfony-cmf/search-bundle": "1.1.*",
+        "symfony-cmf/create-bundle": "1.2.*",
+        "symfony-cmf/seo-bundle":"1.1.*",
         "jackalope/jackalope-doctrine-dbal": "1.1.*",
         "jackalope/jackalope-jackrabbit": "1.1.*",
         "doctrine/doctrine-bundle": "1.2.*",
@@ -35,7 +35,7 @@
         "sonata-project/cache-bundle": "2.1.*",
         "sonata-project/doctrine-phpcr-admin-bundle": "1.1.*",
         "sonata-project/jquery-bundle": "1.8.3",
-        "symfony-cmf/block-bundle": "1.1.*",
+        "symfony-cmf/block-bundle": "1.2.*",
         "eko/feedbundle": "1.0.*",
         "lunetics/locale-bundle": "2.3.*",
         "liip/imagine-bundle": "0.21.*",
@@ -45,8 +45,9 @@
     },
     "require-dev": {
         "liip/functional-test-bundle": "1.0.*",
-        "symfony-cmf/testing": "1.1.*"
+        "symfony-cmf/testing": "1.2.*"
     },
+    "minimum-stability": "dev",
     "scripts": {
         "post-install-cmd": [
             "WillemJan\\CheckBundles\\Composer\\CheckBundles::postPackageUpdate",
