--- a/.travis.yml
+++ b/.travis.yml
@@ -19,9 +19,8 @@ matrix:
     - php: hhvm
 
 before_script:
-  - echo "memory_limit = 1024M" >> travis.php.ini
-  - phpenv config-add travis.php.ini
   - composer self-update
+  - sh -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then echo "memory_limit = 1024M" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini; fi;'
   - cp app/config/phpcr_${TRANSPORT}.yml.dist app/config/phpcr.yml
   - cp app/config/parameters.yml.dist app/config/parameters.yml
   - ./app/tests/travis_${TRANSPORT}.sh
