--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,8 @@
         "symfony/assetic-bundle": "2.3.*",
         "symfony/swiftmailer-bundle": "2.3.*",
         "symfony/monolog-bundle": "2.3.*",
-        "sensio/distribution-bundle": "2.3.*",
+        "sensio/distribution-bundle": "3.0.*",
         "sensio/framework-extra-bundle": "2.3.*",
-        "sensio/generator-bundle": "2.3.*",
         "symfony-cmf/symfony-cmf": "1.2.*",
         "symfony-cmf/simple-cms-bundle": "1.2.*",
         "symfony-cmf/search-bundle": "1.1.*",
@@ -30,12 +29,11 @@
         "symfony-cmf/routing-auto-bundle": "1.0.*",
         "jackalope/jackalope-doctrine-dbal": "1.1.*",
         "jackalope/jackalope-jackrabbit": "1.1.*",
-        "doctrine/doctrine-bundle": "1.2.*",
+        "doctrine/doctrine-bundle": "~1.2",
         "doctrine/data-fixtures": "1.0.*",
         "doctrine/doctrine-cache-bundle": "1.0.*",
         "sonata-project/cache-bundle": "2.1.*",
         "sonata-project/doctrine-phpcr-admin-bundle": "1.2.*",
-        "sonata-project/jquery-bundle": "1.8.3",
         "symfony-cmf/block-bundle": "1.2.*",
         "eko/feedbundle": "1.0.*",
         "lunetics/locale-bundle": "2.3.*",
@@ -45,6 +43,7 @@
         "burgov/key-value-form-bundle": "1.0.*"
     },
     "require-dev": {
+        "sensio/generator-bundle": "~2.3",
         "liip/functional-test-bundle": "1.0.*",
         "symfony-cmf/testing": "1.2.*"
     },
@@ -55,14 +54,16 @@
             "Symfony\\Cmf\\Bundle\\CreateBundle\\Composer\\ScriptHandler::downloadCreateAndCkeditor",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets"
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile"
         ],
         "post-update-cmd": [
             "WillemJan\\CheckBundles\\Composer\\CheckBundles::postPackageUpdate",
             "Symfony\\Cmf\\Bundle\\CreateBundle\\Composer\\ScriptHandler::downloadCreateAndCkeditor",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets"
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile"
         ]
     },
     "config": {
