--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,10 @@ php:
   - 5.6
   - hhvm
 
+matrix:
+  allow_failures:
+    - php: hhvm
+
 env:
   - TRANSPORT=jackrabbit
   - TRANSPORT=doctrine_dbal
