--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -127,6 +127,7 @@ cmf_create:
 cmf_seo:
     title: CMF Sandbox - %%content_title%%
     description: The Content Management Framework. %%content_description%%
+    alternate_locale: ~
 
 sonata_block:
     default_contexts: [cms]
