--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,13 @@
     },
     "require": {
         "php": ">=5.3.3",
-        "symfony/symfony": "2.3.*",
+        "symfony/symfony": "~2.3",
         "twig/extensions": "~1.0",
-        "symfony/assetic-bundle": "2.3.*",
-        "symfony/swiftmailer-bundle": "2.3.*",
-        "symfony/monolog-bundle": "2.3.*",
-        "sensio/distribution-bundle": "3.0.*",
-        "sensio/framework-extra-bundle": "2.3.*",
+        "symfony/assetic-bundle": "~2.3",
+        "symfony/swiftmailer-bundle": "~2.3",
+        "symfony/monolog-bundle": "~2.3",
+        "sensio/distribution-bundle": "~3.0",
+        "sensio/framework-extra-bundle": "~2.3",
         "symfony-cmf/symfony-cmf": "1.2.*",
         "symfony-cmf/simple-cms-bundle": "1.2.*",
         "symfony-cmf/search-bundle": "1.1.*",
@@ -30,24 +30,23 @@
         "jackalope/jackalope-doctrine-dbal": "1.1.*",
         "jackalope/jackalope-jackrabbit": "1.1.*",
         "doctrine/doctrine-bundle": "~1.2",
-        "doctrine/data-fixtures": "1.0.*",
-        "doctrine/doctrine-cache-bundle": "1.0.*",
-        "sonata-project/cache-bundle": "2.1.*",
+        "doctrine/data-fixtures": "~1.0",
+        "doctrine/doctrine-cache-bundle": "~1.0",
+        "sonata-project/cache-bundle": "~2.1",
         "sonata-project/doctrine-phpcr-admin-bundle": "1.2.*",
-        "symfony-cmf/block-bundle": "1.2.*",
-        "eko/feedbundle": "1.0.*",
-        "lunetics/locale-bundle": "2.3.*",
-        "liip/imagine-bundle": "1.0.*",
-        "wjzijderveld/check-bundles": "1.1.*",
-        "helios-ag/fm-elfinder-bundle": "1.4.*",
-        "burgov/key-value-form-bundle": "1.0.*"
+        "eko/feedbundle": "~1.0",
+        "lunetics/locale-bundle": "~2.3",
+        "liip/imagine-bundle": "~1.0",
+        "wjzijderveld/check-bundles": "~1.1",
+        "helios-ag/fm-elfinder-bundle": "~1.4",
+        "burgov/key-value-form-bundle": "~1.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3",
-        "liip/functional-test-bundle": "1.0.*",
+        "liip/functional-test-bundle": "~1.0",
         "symfony-cmf/testing": "1.2.*"
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "scripts": {
         "post-install-cmd": [
             "WillemJan\\CheckBundles\\Composer\\CheckBundles::postPackageUpdate",
