--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -2,7 +2,7 @@ parameters:
     locale: en
     locales: [en, fr, de]
 
-    secret: ThisTokenIsNotSoSecretChangeIt
+    secret: bcd39bfa638e42bfd1628d8d7c269841
 
     # a little hack to avoid errors on missing node/coffeescript.
     # remove -disabled if you want coffee.
@@ -22,3 +22,8 @@ parameters:
     mailer_host:       localhost
     mailer_user:       ~
     mailer_password:   ~
+
+    #user
+    security_user_password: $2y$12$zoziRrBLGcLloghFoj6rje1DVgmngducslRKduhQy9HVGCXKP0WYi
+    #admin
+    security_admin_password: $2y$12$j1vardxXG7oBRg/0MXqNP.oXdTlR0foxgeLGqnlypTpmFMiMtdlry
