--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,8 +1,6 @@
 security:
     encoders:
-        Symfony\Component\Security\Core\User\User:
-            algorithm: bcrypt
-            cost: 12
+        Symfony\Component\Security\Core\User\User: plaintext
 
     role_hierarchy:
         ROLE_ADMIN:       [ROLE_USER, ROLE_SONATA_ADMIN, CAN_VIEW_NON_PUBLISHED]
@@ -12,8 +10,8 @@ security:
         in_memory:
             memory:
                 users:
-                    user:  { password: %security_user_password%, roles: [ 'ROLE_USER' ] }
-                    admin: { password: %security_admin_password%, roles: [ 'ROLE_ADMIN' ] }
+                    user:  { password: user, roles: [ 'ROLE_USER' ] }
+                    admin: { password: admin, roles: [ 'ROLE_ADMIN' ] }
 
     firewalls:
         dev:
