--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,6 @@ php:
   - 5.6
   - hhvm
 
-matrix:
-  allow_failures:
-    - php: hhvm
-
 env:
   - TRANSPORT=jackrabbit
   - TRANSPORT=doctrine_dbal
@@ -20,6 +16,7 @@ before_script:
   - sh -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then echo "memory_limit = 1024M" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini; fi;'
   - cp app/config/phpcr_${TRANSPORT}.yml.dist app/config/phpcr.yml
   - cp app/config/parameters.yml.dist app/config/parameters.yml
+  - sh -c 'if [ "$TRAVIS_PHP_VERSION" = "hhvm" ] && [ "$TRANSPORT" = "doctrine_dbal" ]; then composer require --prefer-source "doctrine/dbal"="2.5.*@dev" "doctrine/doctrine-bundle"="1.3.*@dev"; fi;'
   - ./app/tests/travis_${TRANSPORT}.sh
   - app/console doctrine:phpcr:workspace:create sandbox_test -e=test
   - app/console doctrine:phpcr:repository:init -e=test
