--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ before_script:
   - sh -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then echo "memory_limit = 1024M" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini; fi;'
   - cp app/config/phpcr_${TRANSPORT}.yml.dist app/config/phpcr.yml
   - cp app/config/parameters.yml.dist app/config/parameters.yml
+  - sh -c 'if [ "$TRAVIS_PHP_VERSION" == "hhvm" -a "$TRANSPORT" == "doctrine_dbal" ]; then composer require --dev --no-update doctrine/dbal=dev-master; fi;'
   - ./app/tests/travis_${TRANSPORT}.sh
   - app/console doctrine:phpcr:workspace:create sandbox_test -e=test
   - app/console doctrine:phpcr:repository:init -e=test
