New configuration for Sensiolabs Insight and some small code fixes

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -22,3 +22,7 @@ parameters:
     mailer_host:       localhost
     mailer_user:       ~
     mailer_password:   ~
+
+    security_users:
+        user:  { password: user, roles: [ 'ROLE_USER' ] }
+        admin: { password: admin, roles: [ 'ROLE_ADMIN' ] }
