--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -9,9 +9,7 @@ security:
     providers:
         in_memory:
             memory:
-                users:
-                    user:  { password: user, roles: [ 'ROLE_USER' ] }
-                    admin: { password: admin, roles: [ 'ROLE_ADMIN' ] }
+                users: %security_users%
 
     firewalls:
         dev:
