--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -99,7 +99,7 @@ cmf_core:
 cmf_content:
     persistence:
         phpcr:
-            document_class: Sandbox\MainBundle\Document\DemoSeoContent
+            document_class: AppBundle\Document\DemoSeoContent
 
 cmf_routing:
     chain:
@@ -111,7 +111,7 @@ cmf_routing:
         controllers_by_type:
             demo_type: sandbox_main.controller:typeAction
         controllers_by_class:
-            Sandbox\MainBundle\Document\DemoClassContent: sandbox_main.controller:classAction
+            AppBundle\Document\DemoClassContent: sandbox_main.controller:classAction
             Symfony\Cmf\Bundle\RoutingBundle\Doctrine\Phpcr\RedirectRoute:  cmf_routing.redirect_controller:redirectAction
 
         templates_by_class:
@@ -213,7 +213,7 @@ sonata_doctrine_phpcr_admin:
         Doctrine\ODM\PHPCR\Document\Generic:
             valid_children:
                 - all
-        Sandbox\MainBundle\Document\DemoSeoContent:
+        AppBundle\Document\DemoSeoContent:
             valid_children:
                 - Symfony\Cmf\Bundle\BlockBundle\Doctrine\Phpcr\SimpleBlock
                 - Symfony\Cmf\Bundle\BlockBundle\Doctrine\Phpcr\ContainerBlock
@@ -336,7 +336,7 @@ jms_serializer:
         directories:
             CmfContentBundle:
                 namespace_prefix: "Symfony\Cmf\Bundle\ContentBundle"
-                path: "@SandboxMainBundle/Resources/config/serializer/cmf"
+                path: "@AppBundle/Resources/config/serializer/cmf"
 
 fos_rest:
     view:
