Make sure a correct sonata version is installed

--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
         "doctrine/doctrine-cache-bundle": "~1.0",
         "sonata-project/cache-bundle": "~2.1",
         "sonata-project/doctrine-phpcr-admin-bundle": "1.2.*",
+        "sonata-project/admin-bundle": ">=2.3.3",
         "eko/feedbundle": "~1.0",
         "lunetics/locale-bundle": "~2.3",
         "liip/imagine-bundle": "~1.0",
