--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "symfony/monolog-bundle": "~2.3",
         "sensio/distribution-bundle": "~3.0",
         "sensio/framework-extra-bundle": "~2.3",
-        "symfony-cmf/symfony-cmf": "1.2.*",
+        "symfony-cmf/symfony-cmf": "1.3.*",
         "symfony-cmf/simple-cms-bundle": "1.2.*",
         "symfony-cmf/search-bundle": "1.1.*",
         "symfony-cmf/create-bundle": "1.2.*",
@@ -33,7 +33,7 @@
         "doctrine/data-fixtures": "~1.0",
         "doctrine/doctrine-cache-bundle": "~1.0",
         "sonata-project/cache-bundle": "~2.1",
-        "sonata-project/doctrine-phpcr-admin-bundle": "1.2.*",
+        "sonata-project/doctrine-phpcr-admin-bundle": "2.0.*",
         "eko/feedbundle": "~1.0",
         "lunetics/locale-bundle": "~2.3",
         "liip/imagine-bundle": "~1.0",
@@ -46,7 +46,7 @@
         "liip/functional-test-bundle": "~1.0",
         "symfony-cmf/testing": "1.2.*"
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "scripts": {
         "post-install-cmd": [
             "WillemJan\\CheckBundles\\Composer\\CheckBundles::postPackageUpdate",
