--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "symfony-cmf/create-bundle": "1.2.*",
         "symfony-cmf/seo-bundle": "1.1.*",
         "symfony-cmf/routing-auto-bundle": "1.0.*",
+        "symfony-cmf/resource-rest-bundle": "1.*",
         "jackalope/jackalope-doctrine-dbal": "1.1.*",
         "jackalope/jackalope-jackrabbit": "1.1.*",
         "doctrine/doctrine-bundle": "~1.2",
