--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -202,6 +202,9 @@ sonata_admin:
                     - cmf_simple_cms.persistence.phpcr.admin.page
 
 sonata_doctrine_phpcr_admin:
+    templates:
+        form:
+            - SandboxMainBundle:Admin:form_admin_fields.html.twig
     document_tree_defaults: [locale]
     document_tree:
         Doctrine\ODM\PHPCR\Document\Generic:
