--- a/composer.json
+++ b/composer.json
@@ -14,33 +14,42 @@
     },
     "require": {
         "php": ">=5.3.9",
+
         "symfony/symfony": "~2.3",
-        "twig/extensions": "~1.0",
         "symfony/assetic-bundle": "~2.3",
         "symfony/swiftmailer-bundle": "~2.3",
         "symfony/monolog-bundle": "~2.3",
+
+        "twig/extensions": "~1.0",
+
         "sensio/distribution-bundle": "~3.0",
         "sensio/framework-extra-bundle": "~2.3",
-        "symfony-cmf/symfony-cmf": "dev-menu_2.0",
-        "symfony-cmf/simple-cms-bundle": "dev-menu_20",
+
+        "symfony-cmf/symfony-cmf": "1.3.*",
+        "symfony-cmf/simple-cms-bundle": "1.3.*",
         "symfony-cmf/search-bundle": "1.1.*",
         "symfony-cmf/create-bundle": "1.2.*",
         "symfony-cmf/seo-bundle": "1.1.*",
-        "symfony-cmf/routing-auto-bundle": "1.0.*",
-        "jackalope/jackalope-doctrine-dbal": "1.1.*",
-        "jackalope/jackalope-jackrabbit": "1.1.*",
+        "symfony-cmf/routing-auto-bundle": "1.1.*",
+
+        "jackalope/jackalope-doctrine-dbal": "1.2.*",
+        "jackalope/jackalope-jackrabbit": "1.2.*",
+
         "doctrine/doctrine-bundle": "~1.2",
         "doctrine/data-fixtures": "~1.0",
         "doctrine/doctrine-cache-bundle": "~1.0",
+
         "sonata-project/cache-bundle": "~2.1",
         "sonata-project/doctrine-phpcr-admin-bundle": "1.2.*",
         "sonata-project/admin-bundle": ">=2.3.3",
+
         "eko/feedbundle": "~1.0",
         "lunetics/locale-bundle": "~2.3",
         "liip/imagine-bundle": "~1.0",
         "wjzijderveld/check-bundles": "~1.1",
         "helios-ag/fm-elfinder-bundle": "~1.4",
         "burgov/key-value-form-bundle": "~1.0",
+        "knplabs/knp-menu-bundle": "^2.1",
         "incenteev/composer-parameter-handler": "~2.0"
     },
     "require-dev": {
