implemented new developer environment for the symfony-cmf
- vagrant with an ubuntu trusty
- stack with customizable parameters (hostname/ip/php version)
- support for the jackrabbit and doctrine-dbal implementations of jackalope

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# CMF
 composer.phar
 app/cache/*
 app/logs/*
@@ -18,3 +19,8 @@ jackrabbit/
 jackrabbit-standalone-*.jar
 vagrant/.vagrant
 bin/
+
+# Vagrant Environment
+vagrant/hieradata/local.yaml
+.vagrant/
+vagrant/local_machine.yaml
