--- a/composer.json
+++ b/composer.json
@@ -67,6 +67,9 @@
         ]
     },
     "config": {
+        "platform": {
+            "php": "5.4"
+        },
         "bin-dir": "bin"
     },
     "extra": {
