--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,20 @@
 composer.phar
+app/cache/*
+app/logs/*
+app/config/parameters.yml
+app/config/phpcr.yml
+app/bootstrap.php.cache
+app/app.sqlite
+app/check.php
+app/SymfonyRequirements.php
 web/bundles/
 web/js/
 web/css/
-app/cache/*
-app/logs/*
 web/media
 web/assetic
 build/
 vendor/
-vendor
 jackrabbit/
 jackrabbit-standalone-*.jar
 vagrant/.vagrant
-app/bootstrap.php.cache
-.idea/
-app/SymfonyRequirements.php
-/bin/
-/app/app.sqlite
-app/check.php
+bin/
