--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ php:
   - 5.3
   - 5.4
   - 5.5
+  - 5.6
   - 7.0
   - hhvm
 
@@ -29,7 +30,7 @@ before_install:
   - composer self-update
   - if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then echo "memory_limit = -1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini; fi
 
-install: if [ "$COMPOSER_INSTAL" ]; then composer install --no-scripts --prefer-dist; else composer update --no-scripts --prefer-dist; fi
+install: if [ "$COMPOSER_INSTALL" != "1" ]; then composer update --no-scripts --prefer-dist; else composer install --no-scripts --prefer-dist; fi
 
 before_script:
   - cp app/config/phpcr_${TRANSPORT}.yml.dist app/config/phpcr.yml
